# webhook-repo

./: .env.example  README.md  index.html  main.py  pyproject.toml
app/: __init__.py  utils.py
app/routes/: __init__.py  actions.py
app/schemas/: actions.py
